# secure-env

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  makefile
.cargo/: config.toml
.github/workflows/: android_test.sh  cd.yml  ci.yml
crates/example-android/: Cargo.toml
crates/example-android/src/: lib.rs
crates/secure-env/: Cargo.toml
crates/secure-env/src/: android.rs  ios.rs  lib.rs
examples/android/: Cargo.toml
examples/android/src/: lib.rs
examples/ios/: Cargo.toml
examples/ios/src/: lib.rs
examples/mobile_tests/: Cargo.toml
examples/mobile_tests/src/: lib.rs
src/: android.rs  common_hsm.rs  error.rs  ios.rs  jni.rs  jni_tokens.rs  key.rs  lib.rs  secure_environment.rs  senv.rs
