[package]
name = "animo-secure-env"
version = "0.5.0"
edition = "2021"
rust-version = "1.67"
license = "Apache-2.0"
authors = ["Berend Sliedrecht <sliedrecht@berend.io>"]
description = "secure-env is a wrapper library around the Android KeyStore and the iOS Security Framework for key creation and sign operations using the Secure Element"
repository = "https://github.com/animo/secure-env"
keywords = ["cryptography", "hsm", "security", "keystore", "security-framework"]
categories = ["cryptography"]

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim", 
  "x86_64-apple-ios",
  "aarch64-linux-android",
  "x86_64-linux-android", 
  "armv7-linux-androideabi",
  "i686-linux-android"
]

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]
name = "secure_env"

[features]
default = []
android_testing = []

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = { version = "2.11.1", features = ["OSX_10_13"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
lazy_static = "1.4.0"
paste = "1.0.15"
x509-parser = "0.16.0"
libc = "0.2.155"
ndk-context = "0.1.1"
ndk-sys = "0.6.0"

[dependencies]
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
thiserror = "1.0.60"
