[package]
name = "android"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_android"
crate-type = ["cdylib"]

[dependencies]
secure-env = { path = ".." }
android-activity = { version = "0.5.0", features = ["native-activity"] }
android_logger = "0.13.2"
jni = { version = "0.21.1", features = ["invocation"] }
log = "0.4.20"
ndk-context = "0.1.1"
lazy_static = "1.4.0"
