[package]
name = "ios"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[package.metadata.ios]
build_targets = ["aarch64-apple-ios-sim"]
deployment_target = "17.0"
bundle_id_prefix = "id.animo"
dependencies = ["Security.framework"]

[dependencies]
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
secure-env = { path = "../.." }
askar-crypto = "0.3.1"
p256 = "0.13.2"
