[package]
name = "ios"
version = "0.1.0"
edition = "2021"

[package.metadata.ios]
build_targets = ["aarch64-apple-ios-sim", "aarch64-apple-ios", "x86_64-apple-ios"]
deployment_target = "17.0"
bundle_id_prefix = "id.animo"
dependencies = ["Security.framework"]

[lib]
crate-type = ["staticlib"]

[dependencies]
mobile_tests = { path = "../mobile_tests" }
